hphp/hack/test/typecheck/stricter_consts/class_interface_1.bad.php.exp
File "class_interface_1.bad.php", line 12, characters 17-17:
Some members in class `D` are incompatible with those declared in type `C` (Typing[4374])
  File "class_interface_1.bad.php", line 9, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "class_interface_1.bad.php", line 5, characters 13-13:
  `X` inherited from `C`
  File "class_interface_1.bad.php", line 9, characters 13-13:
  conflicts with constant `X` inherited from `I`.
